--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <body>
 <header>
     <h1>Ryan Dooley</h1>
-    <h2>Full Stack Developer</h2>
 
     <nav>
         <ul>
@@ -30,9 +29,10 @@
 </header>
 
     <section class="hero">
-        
+        <h2>Cool Subtitle Here</h2>
     </section>
 
+    <div class="flex-row">
     <!-- Bio Section -->
     <section class="bio" id="bio">
         <h2>About Me</h2>
@@ -56,6 +56,7 @@
             Filler
         </p>
     </section>
+</div>
 
 <footer>
     © Ryan Dooley 2022
