styled page, added project and a bio section

--- a/index.html
+++ b/index.html
@@ -29,37 +29,63 @@
 </header>
 
     <section class="hero">
-        <h2>Cool Subtitle Here</h2>
+        <h2>Full Stack Developer</h2>
     </section>
 
-    <div class="flex-row">
+    <div class="flex-column">
     <!-- Bio Section -->
+    <h2>About Me</h2>
     <section class="bio" id="bio">
-        <h2>About Me</h2>
-        <p>
-            Filler
-        </p>
+        <div class="flex-row"></div>
+        <img src="assets\images\bcpfp.jpg" alt="picture of Ryan Dooley">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pulvinar sapien et ligula ullamcorper malesuada proin libero. Nulla at volutpat diam ut venenatis tellus in metus. Scelerisque fermentum dui faucibus in ornare quam viverra orci. Pellentesque elit ullamcorper dignissim cras tincidunt lobortis feugiat vivamus at. At imperdiet dui accumsan sit amet nulla facilisi morbi tempus. At lectus urna duis convallis convallis tellus. Ut enim blandit volutpat maecenas volutpat blandit aliquam. Varius vel pharetra vel turpis nunc eget lorem dolor sed. Nisl condimentum id venenatis a condimentum vitae sapien. Scelerisque varius morbi enim nunc faucibus a pellentesque. Ultrices tincidunt arcu non sodales neque.
+            </p>
+        </div>
     </section>
 
     <!-- My Work Section -->
     <section class="work" id="work">
         <h2>My Projects</h2>
-        <p>
-            Filler
-        </p>
+        <a href="https://rdoolz51.github.io/run-buddy/index.html" target="_blank" title="My First Project">
+            <img src="./assets/images/runbuddy.jpg" alt="runbuddy project" />
+        </a>
+        <div class="flex-row">
+            <section>
+                <a href="#project2">
+                    <img src="./assets/images/placeholder.jpg" id="project 2" alt="placeholder project" title="Placeholder" />
+                </a>
+            </section>
+            <section>
+                <a href="#project2">
+                    <img src="./assets/images/placeholder.jpg" id="project 2" alt="placeholder project" title="Placeholder" />
+                </a>
+            </section>
+            <section>
+                <a href="#project2">
+                    <img src="./assets/images/placeholder.jpg" id="project 2" alt="placeholder project" title="Placeholder" />
+                </a>
+            </section>
+        </div>
     </section>
 
     <!-- Contact Section -->
     <section class="contact" id="contact">
         <h2>Get In Contact With Me</h2>
-        <p>
-            Filler
-        </p>
+    <label>
+        <strong>Email:</strong> <a href="mailto:Rdoolz51@aol.com">Rdoolz51@aol.com</a> 
+    </label>
+    <label>
+        <strong>Phone:</strong> <a href="tel:5709512581">(570) 951-2581</a> 
+    </label>
     </section>
 </div>
 
 <footer>
+    <h3>Thank you for your interest</h3>
+    <p>
     © Ryan Dooley 2022
+    </p>
 </footer>
 
 </body>
