--- a/index.html
+++ b/index.html
@@ -10,38 +10,45 @@
 </head>
 
 <body>
-<header>
-    <h1>Ryan Dooley</h1>
+    <header>
+        <h1>Ryan Dooley</h1>
 
-    <nav>
-        <ul>
-            <li>
-                <a href="#bio">Bio</a>
-            </li>
-            <li>
-                <a href="#work">My Work</a>
-            </li>
-            <li>
-                <a href="#contact">Contact</a>
-            </li>
-        </ul>
-    </nav>
-</header>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#bio">Bio</a>
+                </li>
+                <li>
+                    <a href="#work">My Work</a>
+                </li>
+                <li>
+                    <a href="#contact">Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
     <section class="hero">
         <h2>Full Stack Developer</h2>
     </section>
 
     <div class="flex-column">
-    <!-- Bio Section -->
-    <h2>About Me</h2>
-    <section class="bio" id="bio">
-        <div class="flex-row"></div>
-        <img src="assets\images\bcpfp.jpg" alt="picture of Ryan Dooley">
+        <!-- Bio Section -->
+        <h2>About Me</h2>
+        <section class="bio" id="bio">
+            <div class="flex-row"></div>
+            <img src="assets\images\bcpfp.jpg" alt="picture of Ryan Dooley">
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pulvinar sapien et ligula ullamcorper malesuada proin libero. Nulla at volutpat diam ut venenatis tellus in metus. Scelerisque fermentum dui faucibus in ornare quam viverra orci. Pellentesque elit ullamcorper dignissim cras tincidunt lobortis feugiat vivamus at. At imperdiet dui accumsan sit amet nulla facilisi morbi tempus. At lectus urna duis convallis convallis tellus. Ut enim blandit volutpat maecenas volutpat blandit aliquam. Varius vel pharetra vel turpis nunc eget lorem dolor sed. Nisl condimentum id venenatis a condimentum vitae sapien. Scelerisque varius morbi enim nunc faucibus a pellentesque. Ultrices tincidunt arcu non sodales neque.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Pulvinar sapien et ligula ullamcorper malesuada proin libero. Nulla at volutpat
+                diam ut venenatis tellus in metus. Scelerisque fermentum dui faucibus in ornare quam viverra orci.
+                Pellentesque elit ullamcorper dignissim cras tincidunt lobortis feugiat vivamus at. At imperdiet dui
+                accumsan sit amet nulla facilisi morbi tempus. At lectus urna duis convallis convallis tellus. Ut enim
+                blandit volutpat maecenas volutpat blandit aliquam. Varius vel pharetra vel turpis nunc eget lorem dolor
+                sed. Nisl condimentum id venenatis a condimentum vitae sapien. Scelerisque varius morbi enim nunc
+                faucibus a pellentesque. Ultrices tincidunt arcu non sodales neque.
             </p>
-        </div>
+    </div>
     </section>
 
     <!-- My Work Section -->
@@ -53,17 +60,20 @@
         <div class="flex-row">
             <section>
                 <a href="#project2">
-                    <img src="./assets/images/placeholder.jpg" id="project 2" alt="placeholder project" title="Placeholder" />
+                    <img src="./assets/images/placeholder.jpg" id="project 2" alt="placeholder project"
+                        title="Placeholder" />
                 </a>
             </section>
             <section>
                 <a href="#project2">
-                    <img src="./assets/images/placeholder.jpg" id="project 2" alt="placeholder project" title="Placeholder" />
+                    <img src="./assets/images/placeholder.jpg" id="project 2" alt="placeholder project"
+                        title="Placeholder" />
                 </a>
             </section>
             <section>
                 <a href="#project2">
-                    <img src="./assets/images/placeholder.jpg" id="project 2" alt="placeholder project" title="Placeholder" />
+                    <img src="./assets/images/placeholder.jpg" id="project 2" alt="placeholder project"
+                        title="Placeholder" />
                 </a>
             </section>
         </div>
@@ -72,21 +82,21 @@
     <!-- Contact Section -->
     <section class="contact" id="contact">
         <h2>Get In Contact With Me</h2>
-    <label>
-        <strong>Email:</strong> <a href="mailto:Rdoolz51@aol.com">Rdoolz51@aol.com</a> 
-    </label>
-    <label>
-        <strong>Phone:</strong> <a href="tel:5709512581">(570) 951-2581</a> 
-    </label>
+        <label>
+            <strong>Email:</strong> <a href="mailto:Rdoolz51@aol.com">Rdoolz51@aol.com</a>
+        </label>
+        <label>
+            <strong>Phone:</strong> <a href="tel:5709512581">(570) 951-2581</a>
+        </label>
     </section>
-</div>
+    </div>
 
-<footer>
-    <h3>Thank you for your interest</h3>
-    <p>
-    © Ryan Dooley 2022
-    </p>
-</footer>
+    <footer>
+        <h3>Thank you for your interest</h3>
+        <p>
+            © Ryan Dooley 2022
+        </p>
+    </footer>
 
 </body>
 
