added first project

--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
     <!-- My Work Section -->
     <section class="work" id="work">
         <h2>My Projects</h2>
-        <a href="https://rdoolz51.github.io/run-buddy/index.html" target="_blank" title="My First Project">
-            <img src="./assets/images/runbuddy.jpg" alt="runbuddy project" />
+        <a href="https://rdoolz51.github.io/DDCharacterCreation/" target="_blank" title="My First Project">
+            <img src="./assets/images/DDCharCreator.jpeg" alt="Dungeons and Dragons character creation tool" />
         </a>
         <div class="flex-row">
-            <section>
-                <a href="#project2">
-                    <img src="./assets/images/placeholder.jpg" id="project 2" alt="placeholder project"
-                        title="Placeholder" />
+            <section class="run-buddy">
+                <a href="https://rdoolz51.github.io/run-buddy/index.html" target="_blank">
+                    <img src="./assets/images/runbuddy.jpg" id="project 2" alt="placeholder project"
+                        title="Run Buddy Project" />
                 </a>
             </section>
             <section>
