updated projects and README

--- a/index.html
+++ b/index.html
@@ -58,21 +58,21 @@
             <img src="./assets/images/DDCharCreator.jpeg" alt="Dungeons and Dragons character creation tool" />
         </a>
         <div class="flex-row">
-            <section class="run-buddy">
-                <a href="https://rdoolz51.github.io/run-buddy/index.html" target="_blank">
-                    <img src="./assets/images/runbuddy.jpg" id="project 2" alt="placeholder project"
-                        title="Run Buddy Project" />
+            <section>
+                <a href="#" target="#">
+                    <img src="./assets/images/placeholder.jpg" id="project 2" alt="placeholder project"
+                        title="" />
                 </a>
             </section>
             <section>
                 <a href="#project2">
-                    <img src="./assets/images/placeholder.jpg" id="project 2" alt="placeholder project"
+                    <img src="./assets/images/placeholder.jpg" id="project 3" alt="placeholder project"
                         title="Placeholder" />
                 </a>
             </section>
             <section>
                 <a href="#project2">
-                    <img src="./assets/images/placeholder.jpg" id="project 2" alt="placeholder project"
+                    <img src="./assets/images/placeholder.jpg" id="project 4" alt="placeholder project"
                         title="Placeholder" />
                 </a>
             </section>
