--- a/index.html
+++ b/index.html
@@ -58,21 +58,20 @@
             <img src="./assets/images/DDCharCreator.jpeg" alt="Dungeons and Dragons character creation tool" />
         </a>
         <div class="flex-row">
-            <section>
-                <a href="#" target="#">
-                    <img src="./assets/images/placeholder.jpg" id="project 2" alt="placeholder project"
-                        title="" />
+            <section class="proj2">
+                <a href="https://board-g4me-tracker.herokuapp.com/" target="_blank" title="My Second Project">
+                    <img src="./assets/images/board-game-tracker-ss.jpg" id="project_2" alt="Board Game Tracker website for project 2" />
                 </a>
             </section>
             <section>
-                <a href="#project2">
-                    <img src="./assets/images/placeholder.jpg" id="project 3" alt="placeholder project"
+                <a href="#project3">
+                    <img src="./assets/images/placeholder.jpg" id="project_3" alt="placeholder project"
                         title="Placeholder" />
                 </a>
             </section>
             <section>
-                <a href="#project2">
-                    <img src="./assets/images/placeholder.jpg" id="project 4" alt="placeholder project"
+                <a href="#project4">
+                    <img src="./assets/images/placeholder.jpg" id="project_4" alt="placeholder project"
                         title="Placeholder" />
                 </a>
             </section>
